tests/codegen/fail/unsupported_function_value_build.ql
fn add_one(value: Int) -> Int {
    return value + 1
}

fn main() -> Int {
    let f = add_one
    return 0
}
